<resources>
    <string name="app_name">ChefMaster</string>
    <string name="search_hint">search hint</string>
    <string name="today_recipe">today recipe</string>
    <string name="recommend">recommend</string>
    <string name="category">category</string>
    <string name="sort_by_calories">sort by calories</string>
    <string name="sort_by_calories_selected">sort by calories ✓</string>
    <string name="recipes_list_description">菜谱列表，包含多种美食制作方法</string>
    <string name="favorite">favorite</string>
    <string name="ingredients_title">name</string>
    <string name="steps_title">steps</string>
    <string name="recipe_image_desc">菜谱展示图片</string>
</resources>
